<resources>
    <string name="app_name">Score Keeper</string>
    <string name="firstTeam">GALATASARAY</string>
    <string name="secondTeam">Other Team</string>
    <string name="goal">Scored a Goal!</string>
    <string name="yellowCard">Yellow Card!</string>
    <string name="redCard">Red Card!</string>
    <string name="teamACard">Galatasaray has shown no cards yet!</string>
    <string name="teamBCard">Other Team has shown no cards yet!</string>


</resources>
