<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/pitch" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:padding="8dp"
                android:background="#FFFF00"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/firstTeam"
                android:textColor="#ff0000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:text="0"
                android:textColor="#ff0000"
                android:textSize="60sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:onClick="goalScoredTeamA"
                android:text="@string/goal"
                android:textColor="#FFFFFF"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="1dp"
                android:text="@string/yellowCard"
                android:textColor="#FFFF00"
                android:onClick="yellowCardTeamA"
                android:textSize="12sp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="16dp"
                android:text="@string/redCard"
                android:textColor="#FF0000"
                android:onClick="redCardTeamA"
                android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/team_a_cards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/teamACard"
                android:padding="16dp"
                android:textColor="#ff0000"
                android:textSize="24sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="#FFFF00" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:padding="8dp"
                android:background="#FFFF00"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/secondTeam"
                android:textColor="#ff0000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:text="0"
                android:textColor="#ff0000"
                android:textSize="60sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:onClick="goalScoredTeamB"
                android:text="@string/goal"
                android:textColor="#FFFFFF"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="1dp"
                android:textColor="#FFFF00"
                android:onClick="yellowCardTeamB"
                android:text="@string/yellowCard"
                android:textSize="12sp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="16dp"
                android:textColor="#FF0000"
                android:textSize="12sp"
                android:onClick="redCardTeamB"
                android:text="@string/redCard" />

            </LinearLayout>

            <TextView
                android:id="@+id/team_b_cards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/teamBCard"
                android:padding="16dp"
                android:textColor="#ff0000"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:onClick="resetScore"
        android:text="Reset" />

</RelativeLayout>